packages/typ/tests/fixtures/diagnostics/0633_functor_opaque_result_annotation_mismatch_08.ml.expected
File "0633_functor_opaque_result_annotation_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0633_functor_opaque_result_annotation_mismatch_08 is not a valid module name.

File "0633_functor_opaque_result_annotation_mismatch_08.ml", line 20, characters 14-25:
20 | let _ : int = Out_theta.y
                   ^^^^^^^^^^^
Error: The value Out_theta.y has type Out_theta.u = Make_theta(Input_theta).u
       but an expression was expected of type int
